# Transistor-Algorithm

./: LICENSE  README.md  net.py  split_dataset.py  vis_test.cpp
auto_aim/: CMakeLists.txt  main.cpp  main.h  parameter.yaml
auto_aim/include/: Armor.h  Camera.h  DetectArmor.h  KalmanFilter.h  Light.h  LightBarDetector.h  Params.h  PnPSolver.h  Tracker.h  definition.h  tracker_kalman_filter.h
auto_aim/src/: Connect.cpp  DetectArmor.cpp  KalmanFilter.cpp  LightBarDetector.cpp  PnPSolver.cpp  Tracker.cpp  cameraConnect.cpp  definition.cpp  tracker_kalman_filter.cpp
dec/armor_detect/: CMakeLists.txt  main.cpp
dec/armor_detect/include/: CameraParams.h  LightBarFinder.h  Log.h  Params.h
dec/armor_detect/src/: LightBarFinder.cpp  Log.cpp  Params.cpp  cameraConnect.cpp
net_python/:  data_augmentation.py  rename.py
number_classifier/: CMakeLists.txt
number_classifier/src/: dataset.h  main.cpp  model.h
te/: CMakeLists.txt  main.cpp
te/include/: Camera.h
te/src/: cameraConnect.cpp
train_net/src/: dataset.h  main.cpp  model.h
